--- a/homeservice_app_ui/pubspec.yaml
+++ b/homeservice_app_ui/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.7.0
   firebase_core: ^1.21.1
+  firebase_storage: ^10.3.7
   flutter:
     sdk: flutter
 
