--- a/homeservice_app_ui/pubspec.yaml
+++ b/homeservice_app_ui/pubspec.yaml
@@ -27,12 +27,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.0
   cupertino_icons: ^1.0.2
+  dots_indicator: ^2.1.0
   firebase_auth: ^3.7.0
   firebase_core: ^1.21.1
   firebase_storage: ^10.3.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
