--- a/homeservice_app_ui/android/app/build.gradle
+++ b/homeservice_app_ui/android/app/build.gradle
@@ -67,5 +67,6 @@ flutter {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
